--- a/hi/index.html
+++ b/hi/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HellO</title>
+    <title>MitsuYushi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montaga&display=swap" rel="stylesheet">
@@ -54,15 +54,15 @@
           <!-- The slideshow -->
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="3Dgirlfriend.jpg" alt="3D" width="100%" height="">
+              <img src="3Dgirlfriend.jpg" alt="3D" width="100%" height="600px">
               <div class="text-center">3D Girlfriend</div>
             </div>
             <div class="carousel-item">
-              <img src="yourname.jpg" alt="Chicago" width="100%" height="">
+              <img src="yourname.jpg" alt="Chicago" width="100%" height="600px">
               <div class="text-center">yourname</div>
             </div>
             <div class="carousel-item">
-              <img src="takagi.jpg" alt="New York" width="100%" height="">
+              <img src="takagi.jpg" alt="New York" width="100%" height="600px">
               <div class="text-center">takagi-san</div>
             </div>
           </div>
