--- a/hi/index.html
+++ b/hi/index.html
@@ -32,9 +32,13 @@
                     <li class="nav-item">
                           <a class="nav-link text-light" href="#contact">Infor</a>
                     </li>
+
                     <div class="active-cyan-3 active-cyan-4 mb-4">
   <input class="form-control" type="text" placeholder="Search" aria-label="Search">
 </div>
+                    <li class="nav-item">
+                        <a href="signup.html"> <button type="button" class="btn btn-primary">Sign Up</button></a>
+                    </li>
                 </ul>
             </div>
         </nav>
