--- a/yushi/about.html
+++ b/yushi/about.html
@@ -75,7 +75,7 @@
 
 <div class="row">
   <div class="col-xs-12 col-md-6">
-    <img class="img-responsive" alt="" src="./assets/images/img-10.jpg">
+    <img class="img-responsive" alt="" src="welcome.gif">
   </div>
   <div class="col-xs-12 col-md-6">
     <h1>About me</h1>
