--- a/ata/index.html
+++ b/ata/index.html
@@ -14,31 +14,13 @@
     <nav  class="navbar navbar-expand-lg navbar-dark " style="background-color: #04496a ;   color:white" >
 
      <div class="container">
-
-           <a  style="padding:0px 25px "class="navbar-brand" href="#"></a><img src="images/logo.png" alt="" style="height:30x;width:180px"  >
+<ul class="nav justify-content-center">
+           <a  class="navbar-brand" href="#"></a><img src="images/logo.png" alt="" style="height:180; width:30" >
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
-       <div class="collapse navbar-collapse" id="navbarResponsive" >
-         <ul class="navbar-nav ">
+     </ul>
 
-           <li class="nav-item">
-             <a class="nav-link" href="#" style="color:white">Internet</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="#" style="color:white">Telecom</a>
-           </li>
-         </ul>
-         <ul class="navbar-nav ml-auto">
-
-           <li class="nav-item">
-             <a class="nav-link" href="#" style="color:white">About Us</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="#" style="color:white">Contact</a>
-           </li>
-         </ul>
-       </div>
      </div>
    </nav>
 
