--- a/Web ass/index.html
+++ b/Web ass/index.html
@@ -73,10 +73,44 @@ Niigata is Japan’s main island. The Minatopia history museum complex includes 
     </div>
   </div>
 </div>
+
+  <div class="row">
+    <div class="col-sm">
+      <div class="card" style="width: 50rem;">
+<img src="image/aki.jpg" class="card-img-top" alt="...">
+<div class="card-body">
+  <h5 class="card-title">Akihabara</h5>
+  <p class="card-text">Akihabara is electronics retailers, ranging from tiny stalls to vast department stores
+      it known by manga, anime, and video games include Tokyo Anime Center, for exhibits and souvenirs,
+      and Radio Kaikan with 10 floors of toys, trading cards, and collectibles. Staff dressed as maids or butlers serve
+      tea and desserts at nearby maid cafes.Akihabara is place for people that like anime game and electronics stuff.Akihabara take place in tokyo</p>
 </div>
-
-
-
+</div>
+    </div>
+    <div class="col-sm">
+      <div class="card" style="width: 50rem;">
+<img src="image/park.jpeg" class="card-img-top" alt="...">
+<div class="card-body"style="">
+  <h5 class="card-title">Shinjuku Gyoen National Garden</h5>
+  <p class="card-text">Shinjuku Gyo-en is a large park and garden in Shinjuku and Shibuya, Tokyo,
+    Japan. It was originally a residence of the Naitō family in the Edo period. Afterwards, it became a garden under
+     the management of the Imperial Household Agency of Japan.The garden is has 20,000 trees and it open everyday from 9am to 6pm</p>
+</div>
+</div>
+    </div>
+    <div class="col-sm">
+      <div class="card" style="width: 50rem;">
+<img src="image/cat.jpg" class="card-img-top" alt="...">
+<div class="card-body">
+  <h5 class="card-title">Aoshima, Ehime</h5>
+  <p class="card-text">Aoshima, Ehime or people called cat island.This island is very small and it have alot alot of cat.
+    japanese people love cat  because they're cute, clean and easier to keep as a pet.
+     You see, having a pet in Japan is a luxury due to long working hours and limited living space.</p>
+</div>
+</div>
+    </div>
+</div>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
