--- a/html/index.html
+++ b/html/index.html
@@ -1,70 +1,81 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    :
+    <link rel="stylesheet" href="style.css" />
     <title>Hello, world!</title>
   </head>
   <body>
     <div class="view">
-    <p style="display:inline-block">pick anime</p>
-    <select name="cars" id="cars">
+      <p style="display: inline-block;">pick anime</p>
+      <select name="cars" id="cars">
         <option value="volvo">weathering with you</option>
         <option value="saab">you name </option>
         <option value="mercedes">violet evergarden</option>
         <option value="audi">naruto</option>
       </select>
     </div>
-    <div class="bord"    style="text-align: center;">
-        <button type="button" class="btn btn-primary"></button> <p style="display:inline-block"> open</p>
-        <button type="button" class="btn btn-secondary"></button> <p style="display:inline-block">selected</p>
-        <button type="button" class="btn btn-success"></button><p style="display:inline-block" >Occupied</p>
+    <div class="bord" style="text-align: center;">
+      <button type="button" class="btn btn-primary"></button>
+      <p style="display: inline-block;">open</p>
+      <button type="button" class="btn btn-secondary"></button>
+      <p style="display: inline-block;">selected</p>
+      <button type="button" class="btn btn-success"></button>
+      <p style="display: inline-block;">Occupied</p>
     </div>
 
     <div class="container">
-        <div class="screen">
-        </div>
+      <div class="screen"></div>
+
+      <div class="table">
+        <tr>
+          <button type="button" class="btn btn-primary"></button>
+          <button type="button" class="btn btn-primary"></button>
+          <button type="button" class="btn btn-primary"></button>
+          <button type="button" class="btn btn-primary"></button>
+          <button type="button" class="btn btn-primary"></button>
+          <button type="button" class="btn btn-primary"></button>
+          <button type="button" class="btn btn-primary"></button>
+          <button type="button" class="btn btn-primary"></button>
+          <button type="button" class="btn btn-primary"></button>
+          <button type="button" class="btn btn-primary"></button>
+          <button type="button" class="btn btn-primary"></button>
+          <button type="button" class="btn btn-primary"></button>
+        </tr>
+      </div>
     </div>
-    <div class="table">
-            <tr>  
-            <button type="button" class="btn btn-primary"></button>
-            <button type="button" class="btn btn-primary"></button>
-            <button type="button" class="btn btn-primary"></button>
-            <button type="button" class="btn btn-primary"></button>
-            <button type="button" class="btn btn-primary"></button>
-            <button type="button" class="btn btn-primary"></button>
-            <button type="button" class="btn btn-primary"></button>
-            <button type="button" class="btn btn-primary"></button>
-            <button type="button" class="btn btn-primary"></button>
-            <button type="button" class="btn btn-primary"></button>
-            <button type="button" class="btn btn-primary"></button>
-            <button type="button" class="btn btn-primary"></button>
-            
-            </tr>
-
-
-    </div>
-    
-
-
-
-
-
-
-
-
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="java.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script src="java.js"></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
