--- a/hunkeangkorng/index.html
+++ b/hunkeangkorng/index.html
@@ -28,11 +28,11 @@
 			</tr>
 			<tr>
 				<td width="300px" valign="top">
-					<a href="https://www.sathapana.com.kh/"><img src="side ads 01 .png" width="300px" height="300px">
-					<a href="https://www.sathapana.com.kh/"><img src="side ads 02.png" width="300px" height="300px">
-					<a href="https://www.sathapana.com.kh/"><img src="side ads 03.png" width="300px" height="300px">	
-					<a href="https://www.sathapana.com.kh/"><img src="side ads 04.png" width="300px" height="300px">
-					<a href="https://www.sathapana.com.kh/"><img src="side ads 09.png" width="300px" height="350px">
+					<a href="https://www.pepsi.com/"><img src="side ads 01 .png" width="300px" height="300px">
+					<a href="https://www.ford.com/"><img src="side ads 02.png" width="300px" height="300px">
+					<a href="https://www.bk.com/"><img src="side ads 03.png" width="300px" height="300px">	
+					<a href="https://www.apple.com/ipad-pro/"><img src="side ads 04.png" width="300px" height="300px">
+					<a href="https://www.coca-colacompany.com/"><img src="side ads 09.png" width="300px" height="350px">
 
 					</td></a>
 
@@ -56,17 +56,17 @@
 						</table>
 					</td>
 				<td width="300px" valign="top">
-					<a href="https://www.sathapana.com.kh/"><img src="side ads 08.png" width="300px" height="300px">
-					<a href="https://www.sathapana.com.kh/"><img src="side ads 07.png" width="300px" height="300px">
-					<a href="https://www.sathapana.com.kh/"><img src="side ads 06.png" width="300px" height="300px">	
-					<a href="https://www.sathapana.com.kh/"><img src="side ads 05.png" width="300px" height="300px">
-					<a href="https://www.sathapana.com.kh/"><img src="side ads 010.png" width="300px" height="350px">
+					<a href="https://www.kfc.com/"><img src="side ads 08.png" width="300px" height="300px">
+					<a href="https://www.ababank.com/"><img src="side ads 07.png" width="300px" height="300px">
+					<a href="https://www.bmw.com/en/index.html"><img src="side ads 06.png" width="300px" height="300px">	
+					<a href="https://www.apple.com/shop/buy-watch/apple-watch"><img src="side ads 05.png" width="300px" height="300px">
+					<a href="https://www.hersheys.com/en_us/home.html/"><img src="side ads 010.png" width="300px" height="350px">
 					
 				</td>
 			</tr>
 			<tr>
 				<th colspan="3" bgcolor="black" height="100px">
-					<table align="center" width="70%">
+					<table align="center" width="1410px">
 						<img src="footer.png" width="1410px" height="100px">
 					</table>
 				</th>
